# m7m

./: .gitignore  Cargo.toml  README.md
src/: data.rs  downloader.rs  files.rs  main.rs  notifiers.rs  triggers.rs  workflow.rs  yamlworkflow.rs
testflows/: fail_telegram.yml  fallbacksteps.yml  once.yml  print1.yml  print2.yml
