[package]
name = "m7m"
version = "0.1.0"
authors = ["Pierric"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
env_logger = "0.10.0"
log = "0.4.20"
parse_duration = "2.1.1"
regex = "1.9.3"
reqwest = { version="0.11.12", features=["blocking"] }
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.87"
serde_yaml = "0.9.25"
telegram_notifyrs = "0.1.3"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
